apps/base/nick-brothers/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nick-brothers
  labels:
    app.kubernetes.io/part-of: nick-brothers
