apps/base/nick-brothers/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: nick-brothers
  labels:
    app: dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
      annotations:
        rollout/timestamp: "2026-02-10T06:00:00Z"
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: dashboard
          image: lzetam/nick-brothers-dashboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
