apps/base/nick-brothers/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: nick-brothers
  labels:
    app: website
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: website
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: website
      annotations:
        rollout/timestamp: "2026-02-10T06:00:00Z"
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: website
          image: lzetam/nick-brothers-site:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 15m
              memory: 48Mi
            limits:
              cpu: 150m
              memory: 192Mi
